          <input type="hidden" class="start-hidden" name="starts" value="'.htmlentities((string)((isset($in['starts']) && is_array($in)) ? $in['starts'] : null), ENT_QUOTES, 'UTF-8').'" />
          <input type="hidden" class="end-hidden" name="ends" value="'.htmlentities((string)((isset($in['ends']) && is_array($in)) ? $in['ends'] : null), ENT_QUOTES, 'UTF-8').'" />
          <button type="submit" class="wf-btn wf-btn-success no-border w100 text-center no-p-lat">
            <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
            Newer posts
          </button>
        </form>
        ';}).'
      </div>
      <div class="col-xs-2 col-sm-4 col-md-4 col-lg-8"></div>
      <div class="col-xs-5 col-sm-4 col-md-4 col-lg-2">
        '.$cx['funcs']['sec']($cx, ((isset($in['data']['news-index']['next']) && is_array($in['data']['news-index'])) ? $in['data']['news-index']['next'] : null), $in, false, function($cx, $in) {return '
        <form action="'.htmlentities((string)((isset($in['host']) && is_array($in)) ? $in['host'] : null), ENT_QUOTES, 'UTF-8').'/'.htmlentities((string)((isset($in['page']) && is_array($in)) ? $in['page'] : null), ENT_QUOTES, 'UTF-8').'/page/'.htmlentities((string)((isset($in['value']) && is_array($in)) ? $in['value'] : null), ENT_QUOTES, 'UTF-8').'" method="GET" id="filters">
          <input type="hidden" class="start-hidden" name="starts" value="'.htmlentities((string)((isset($in['starts']) && is_array($in)) ? $in['starts'] : null), ENT_QUOTES, 'UTF-8').'" />
          <input type="hidden" class="end-hidden" name="ends" value="'.htmlentities((string)((isset($in['ends']) && is_array($in)) ? $in['ends'] : null), ENT_QUOTES, 'UTF-8').'" />
          <button type="submit" class="wf-btn wf-btn-success no-border w100 text-center no-p-lat">
            Older posts
            <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
          </button>
        </form>
        ';}).'
      </div>
    </div>
