@@ -210,7 +210,7 @@
 
 							<div class="adj-content-mobile f-merryw">
 
-								<div class="team-bio-picture visible-lg" style="background-image: url('.htmlentities((string)((isset($in['data']['person']['image']) && is_array($in['data']['person'])) ? $in['data']['person']['image'] : null), ENT_QUOTES, 'UTF-8').');"></div>
+								<div class="team-bio-picture board-bio-picture visible-lg" style="background-image: url('.htmlentities((string)((isset($in['data']['person']['image']) && is_array($in['data']['person'])) ? $in['data']['person']['image'] : null), ENT_QUOTES, 'UTF-8').');"></div>
 								'.((isset($in['data']['person']['description']) && is_array($in['data']['person'])) ? $in['data']['person']['description'] : null).'
 							</div><!--end adj-content-mobile-->
 
