@@ -52,7 +52,7 @@
 
 							<div class="adj-content-mobile f-merryw">
 
-								<div class="team-bio-picture visible-lg" style="background-image: url({{data.person.image}});"></div>
+								<div class="team-bio-picture board-bio-picture visible-lg" style="background-image: url({{data.person.image}});"></div>
 								{{{data.person.description}}}
 							</div><!--end adj-content-mobile-->
 
