@@ -122,6 +122,7 @@
         <form action="{{host}}/{{page}}/page/{{value}}" method="GET" id="filters">
           <input type="hidden" class="start-hidden" name="starts" value="{{starts}}" />
           <input type="hidden" class="end-hidden" name="ends" value="{{ends}}" />
+          <input type="hidden" class="end-hidden" name="pa" value="{{value}}" />
           <button type="submit" class="wf-btn wf-btn-success no-border w100 text-center no-p-lat">
             <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
             Newer posts
@@ -135,6 +136,7 @@
         <form action="{{host}}/{{page}}/page/{{value}}" method="GET" id="filters">
           <input type="hidden" class="start-hidden" name="starts" value="{{starts}}" />
           <input type="hidden" class="end-hidden" name="ends" value="{{ends}}" />
+          <input type="hidden" class="end-hidden" name="pa" value="{{value}}" />
           <button type="submit" class="wf-btn wf-btn-success no-border w100 text-center no-p-lat">
             Older posts
             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
