@@ -2921,11 +2921,16 @@ div.mce_inline_error {
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000343}}
+.board-bio-picture {
+  max-height: 600px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000347}}
 .b-team:first-child {
   margin-left: 0px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000351}}
 .b-team-content {
   overflow: hidden;
   position: relative;
@@ -2936,42 +2941,42 @@ div.mce_inline_error {
   background-position: center center;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000362}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000366}}
 .b-team-content:last-child {
   margin-bottom: 0px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000370}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000374}}
 .b-team-large {
   background-color: #EFEFEF;
   height: 556px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000375}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000379}}
 .b-team-small {
   background-color: #EFEFEF;
   height: 286px;
 }
 @media (min-width: 768px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000375}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000379}}
   .b-team-small {
     height: 263px;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000383}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000387}}
 .b-board-small {
   background-color: #EFEFEF;
   height: 356px;
 }
 @media (min-width: 768px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000383}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000387}}
   .b-board-small {
     height: 400px;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000392}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\0000396}}
 .b-team-qview {
   position: absolute;
   bottom: 0;
@@ -2986,7 +2991,7 @@ div.mce_inline_error {
   -o-transition: 1s ease-in-out;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003107}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003111}}
 .b-team-overlay {
   position: absolute;
   top: 0;
@@ -3002,14 +3007,14 @@ div.mce_inline_error {
   -ms-transition: opacity 0.5s ease-in-out;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003123}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003127}}
 .adj_stit_team {
   padding-left: 10px;
   padding-right: 10px;
 }
 
 @media (min-width: 1200px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003134}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003138}}
   .b-team-large:hover .b-team-qview, .b-team-small:hover .b-team-qview {
     transform: translate(0px, 200px);
     -webkit-transform: translate(0px, 200px);
@@ -3019,19 +3024,19 @@ div.mce_inline_error {
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003146}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003150}}
 .b-team-overlay:hover {
   display: none;
 }
 @media (min-width: 1200px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003146}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003150}}
   .b-team-overlay:hover {
     display: block;
     opacity: 0.6;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003154}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003158}}
 .b-team-tglance {
   width: 100%;
   height: 50px;
@@ -3047,19 +3052,19 @@ div.mce_inline_error {
 
 /* Remainder team */
 @media (max-width: 1200px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003171}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003175}}
   .remainder-team .b-team:nth-child(3n - 2) {
     margin-left: 0;
   }
 }
 @media (min-width: 1200px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003177}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003181}}
   .remainder-team .b-team:nth-child(4n + 1) {
     margin-left: 0;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003185}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003189}}
 .team-bio {
   background-color: rgba(239, 239, 239, 0.5);
   padding: 30px 0px 20px 0px;
@@ -3067,19 +3072,19 @@ div.mce_inline_error {
   min-height: 380px;
 }
 @media (min-width: 768px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003185}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003189}}
   .team-bio {
     padding: 30px 30px 20px 30px;
   }
 }
 @media (min-width: 1200px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003185}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003189}}
   .team-bio {
     padding: 30px 30px 20px 330px;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003200}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003204}}
 .team-bio-picture {
   position: absolute;
   width: 300px;
@@ -3091,7 +3096,7 @@ div.mce_inline_error {
   background-position: center center;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003215}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003219}}
 .adj-img-bio-mobile {
   width: 100%;
   height: auto;
@@ -3110,7 +3115,7 @@ div.mce_inline_error {
 	}
 }
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003238}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003242}}
 .new-nav {
   background-color: #7AA328;
   background-image: url("../img/bg-new-nav-bottom.png");
@@ -3121,7 +3126,7 @@ div.mce_inline_error {
   min-height: 135px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003250}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003254}}
 .ar-book {
   width: 180px;
   height: 258px;
@@ -3132,31 +3137,31 @@ div.mce_inline_error {
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.29);
 }
 @media (min-width: 768px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003250}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003254}}
   .ar-book {
     float: left;
     margin-right: 20px;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003265}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003269}}
 .blq-ar-book {
   clear: both;
 }
 @media (min-width: 768px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003265}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003269}}
   .blq-ar-book {
     clear: none;
   }
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003272}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003276}}
 .ar-content {
   clear: both;
   padding-top: 15px;
 }
 @media (min-width: 768px) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003272}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Volumes\/proyectos\/WWWFoundation\/web\/WF_WordPress_Theme_Development\/app\/styles\/_m-aboutus\.scss}line{font-family:\00003276}}
   .ar-content {
     clear: none;
     padding-top: 0px;
