@@ -283,6 +283,7 @@
         <form action="'.htmlentities((string)((isset($in['host']) && is_array($in)) ? $in['host'] : null), ENT_QUOTES, 'UTF-8').'/'.htmlentities((string)((isset($in['page']) && is_array($in)) ? $in['page'] : null), ENT_QUOTES, 'UTF-8').'/page/'.htmlentities((string)((isset($in['value']) && is_array($in)) ? $in['value'] : null), ENT_QUOTES, 'UTF-8').'" method="GET" id="filters">
           <input type="hidden" class="start-hidden" name="starts" value="'.htmlentities((string)((isset($in['starts']) && is_array($in)) ? $in['starts'] : null), ENT_QUOTES, 'UTF-8').'" />
           <input type="hidden" class="end-hidden" name="ends" value="'.htmlentities((string)((isset($in['ends']) && is_array($in)) ? $in['ends'] : null), ENT_QUOTES, 'UTF-8').'" />
+          <input type="hidden" class="end-hidden" name="pa" value="'.htmlentities((string)((isset($in['value']) && is_array($in)) ? $in['value'] : null), ENT_QUOTES, 'UTF-8').'" />
           <button type="submit" class="wf-btn wf-btn-success no-border w100 text-center no-p-lat">
             <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
             Newer posts
@@ -296,6 +297,7 @@
         <form action="'.htmlentities((string)((isset($in['host']) && is_array($in)) ? $in['host'] : null), ENT_QUOTES, 'UTF-8').'/'.htmlentities((string)((isset($in['page']) && is_array($in)) ? $in['page'] : null), ENT_QUOTES, 'UTF-8').'/page/'.htmlentities((string)((isset($in['value']) && is_array($in)) ? $in['value'] : null), ENT_QUOTES, 'UTF-8').'" method="GET" id="filters">
           <input type="hidden" class="start-hidden" name="starts" value="'.htmlentities((string)((isset($in['starts']) && is_array($in)) ? $in['starts'] : null), ENT_QUOTES, 'UTF-8').'" />
           <input type="hidden" class="end-hidden" name="ends" value="'.htmlentities((string)((isset($in['ends']) && is_array($in)) ? $in['ends'] : null), ENT_QUOTES, 'UTF-8').'" />
+          <input type="hidden" class="end-hidden" name="pa" value="'.htmlentities((string)((isset($in['value']) && is_array($in)) ? $in['value'] : null), ENT_QUOTES, 'UTF-8').'" />
           <button type="submit" class="wf-btn wf-btn-success no-border w100 text-center no-p-lat">
             Older posts
             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
